# backend/app/Http/Controllers/Api/V1/MetabolismController.php
@@ -5,6 +5,7 @@ declare(strict_types=1);
 namespace App\Http\Controllers\Api\V1;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\Metabolism\CalculateBasalMetabolismRequest;
 use App\UseCases\Metabolism\CalculateBasalMetabolism;
 use Illuminate\Http\JsonResponse;
 use OpenApi\Attributes as OA;
@@ -12,12 +13,19 @@ use OpenApi\Attributes as OA;
 #[OA\Tag(name: 'Metabolism', description: '代謝関連')]
 class MetabolismController extends Controller
 {
-    #[OA\Get(
+    #[OA\Post(
         path: '/basal-metabolism',
         tags: ['Metabolism'],
         summary: '基礎代謝量の計算',
         description: '基礎代謝量を計算する',
         operationId: 'calculateBasalMetabolism',
+        requestBody: new OA\RequestBody(
+            description: '基礎代謝量計算リクエスト',
+            required: true,
+            content: new OA\JsonContent(
+                ref: '#/components/schemas/calculateBasalMetabolismRequest'
+            )
+        ),
         responses: [
             new OA\Response(
                 response: '200',
@@ -32,9 +40,9 @@ class MetabolismController extends Controller
             new OA\Response(response: '422', ref: '#/components/responses/422'),
         ]
     )]
-    public function index(CalculateBasalMetabolism $action): JsonResponse
+    public function index(CalculateBasalMetabolismRequest $request, CalculateBasalMetabolism $action): JsonResponse
     {
-        $response = $action();
+        $response = $action($request);
 
         return response()->json($response, 200, [], JSON_UNESCAPED_UNICODE);
     }
